--- a/openhie-template/package/content/assets/css/openhie.css
+++ b/openhie-template/package/content/assets/css/openhie.css
@@ -1,14 +1,14 @@
 /* Define colors here */
 
 :root {
-  --ig-status-text-color: #006020; /* 1. IG Title and status text color */
-  --navbar-bg-color: #206030; /* 2. Header container color */
+  --ig-status-text-color: #333333; /* 1. IG Title and status text color */
+  --navbar-bg-color: #1f4d2e; /* 2. Header container color */
   --footer-bg-color: #666e68; /* 3. Footer background color*/
-  --footer-container-color: #104020; /* 4. Footer container color */
+  --footer-container-color: #1f4d2e; /* 4. Footer container color */
   --stripe-bg-color: #668877; /* 5. Header strip color */
 
-  --btn-hover-color: #20b070;  /* 6. Menu button hover color */
-  --btn-active-color: #40d090; /* 7. Menu button active color */
+  --btn-hover-color: #33804a;  /* 6. Menu button hover color */
+  --btn-active-color: #43a862; /* 7. Menu button active color */
   --btn-text-color: #ddffee; /* 8. Menu button text color */
   --btn-gradient-start-color: #33aa77; /* 9. Menu item gradient start color */
   --btn-gradient-end-color: #209966; /* 10. Menu item gradient end  color */
